修改 单例模式.md 文章

--- a/docs/设计模式/单例模式.md
+++ b/docs/设计模式/单例模式.md
@@ -396,3 +396,9 @@ public class ThreadLocalSingleton {
 
 
 可以实现每个线程中都只有一个对象
+
+
+
+### 3、总结
+
+单例模式 内存中只有一个实例，可以减少内存开销，从而避免对资源的多重占用。可以降低创建和销毁对象的开销，来提高系统性能。但是因为单例模式没有接口，所以扩展比较难，如果要扩展单例对象，就必须要修改代码。
