--- a/docs/设计模式/原型模式.md
+++ b/docs/设计模式/原型模式.md
@@ -215,3 +215,5 @@ public class ConcretePrototype implements Cloneable,Serializable{
 Java自带的原型模式是基于内存二进制流的拷贝，比直接new一个对象性能上提升了许多。同时可以简化创建过程。
 
 但是原型模式必需添加克隆方法，当对现有的类进行改造的时候，需要修改代码，从而违反了开闭原则。
+
+原型模式和单例模式是冲突的。
