修改 多线程的基本原理.md 文章中的错别字

--- a/docs/java/并发/多线程的基本原理.md
+++ b/docs/java/并发/多线程的基本原理.md
@@ -274,7 +274,7 @@ public class InterruptDemo {
 >
 > 因为当捕获到这个异常后，会将中断状态进行复位。
 >
-> 处理异常会复位以外，还可以通过调用thread.interrupted()方法进行复位。
+> 除了异常会复位以外，还可以通过调用thread.interrupted()方法进行复位。
 
 
 
