修改 多线程的基本原理.md 文章  添加使用jstack查看线程状态的图片

--- a/docs/java/并发/多线程的基本原理.md
+++ b/docs/java/并发/多线程的基本原理.md
@@ -176,6 +176,8 @@ public class ThreadStatusDemo {
 
 3、通过jstack pid 查看当前线程的运行状态
 
+![image-20210628204222948](image/image-20210628204222948.png)
+
 
 
 ## 4. 线程的终止
