修改 双重检查锁 给示例代码 添加指令重排的注释

--- a/docs/设计模式/单例模式.md
+++ b/docs/设计模式/单例模式.md
@@ -138,6 +138,12 @@ public class LazyDoubleCheckSingleton {
         if (LAZY_DOUBLE_CHECK_SINGLETON == null){
             synchronized (LazyDoubleCheckSingleton.class){
                 if (LAZY_DOUBLE_CHECK_SINGLETON == null){
+                    //这个地方会发生指令重排
+                    //这里有三个指令：
+                    //1. 给对象分配内存空间
+                    //2. 初始化对象
+                    //3. 将刚刚开辟出来的内存地址赋值给对象的引用
+                    //比如说，还没有进行初始化，却先进行了了赋值，紧接着被使用了，就会导致安全性的问题。
                     LAZY_DOUBLE_CHECK_SINGLETON = new LazyDoubleCheckSingleton();
                 }
             }
