--- a/docs/设计模式/单例模式.md
+++ b/docs/设计模式/单例模式.md
@@ -4,6 +4,14 @@
 
 
 
+**特点：**
+
+- 一个类只能有一个实例（构造器私有）
+- 这个类必须自己创建自己的实例（自己编写实例化逻辑）
+- 这个类需要自行向整个系统提供这个实例（对外提供实例化方法）
+
+
+
 属于创建型模式。
 
 
@@ -11,6 +19,11 @@
 ### 1、适用场景
 
 任何情况下都确保只有一个示例的场景。
+
+- 多线程中的线程池
+- 数据库的连接池
+- 系统环境信息
+- 上下文（ServletContext）
 
 
 
@@ -408,3 +421,29 @@ public class ThreadLocalSingleton {
 ### 3、总结
 
 单例模式 内存中只有一个实例，可以减少内存开销，从而避免对资源的多重占用。可以降低创建和销毁对象的开销，来提高系统性能。但是因为单例模式没有接口，所以扩展比较难，如果要扩展单例对象，就必须要修改代码。
+
+
+
+### 4、面试问题
+
+#### 4.1 系统环境信息（System.getProperties()）？
+
+
+
+#### 4.2 Spring中是如何保证组件单例的？
+
+
+
+#### 4.3 ServletContext（封装Servlet信息）是什么？是单例的吗？如何保证？
+
+
+
+#### 4.4 ApplicationContext是什么？是单例的吗？如何保证？
+
+- Tomcat中的ApplicationContext：一个应用（一个部署的war包）会有一个应用上下文
+- Spring中的ApplicationContext：表示整个IOC容器
+
+
+
+#### 4.5 数据库连接池一般怎么创建出来的，如何保证单例？
+
