--- a/docs/设计模式/原型模式.md
+++ b/docs/设计模式/原型模式.md
@@ -1,6 +1,6 @@
 ## 原型模式
 
-原型实例指定创建对象的种类，并通过拷贝这些原型创建新的对象。调用者不需要知道任何创建细节，不调用构造函数。也就是说，原型模式主要解决的问题就是创建重复的对象，而且这个对象内容本身比较复杂，因此采用克隆的方式来节省时间。
+原型实例指定创建对象的种类，并通过拷贝这些原型创建新的对象。调用者不需要知道任何创建细节，不调用构造函数。也就是说，原型模式主要解决的问题就是<font color="red">创建重复的对象</font>，而且这个对象内容本身比较复杂，因此采用克隆的方式来节省时间，保证性能。
 
 
 
@@ -14,6 +14,7 @@
 2. new产生的一个对象需要非常繁琐的过程（数据准备、访问权限等）
 3. 构造函数比较复杂
 4. 循环体中生产大量对象时
+5. 一个对象有多个修改者
 
 
 
